man-db 2.8.5
============

Major changes since man-db 2.8.4:

	Fixes:
	------

	* Fix build with Berkeley DB.

	* Fail to configure if flex is needed but missing.

	* Fix the comment in the first line of the configuration file in the
	  case where configure was not given a --with-config-file option.

	* Fix several resource and memory leaks.

man-db 2.8.4 (27 July 2018)
===========================

Major changes since man-db 2.8.3:

	Fixes:
	------

	* Rely on decompressors reading from their standard input rather
	  than redundantly passing them the input file on their command
	  line.  This works better with downstream AppArmor confinement of
	  decompressors.

	* Fix invalid syntax in tmpfiles.d/man-db.conf when configured with
	  --disable-cache-owner.

	* Make seccomp sandbox allow sched_getaffinity, sometimes used by
	  xz.

	* Check for mandb_nfmt and mandb_tfmt in the manual page hierarchy
	  as documented, not in the current directory.  This was broken by
	  the working-directory-handling changes in 2.8.3.  Note that this
	  change means that "man -l" will never use an external formatter
	  (which was never documented behaviour and was surely a bad idea).

	* Make seccomp sandbox allow some shared memory operations across
	  the board rather than just when ESET File Security is in use; the
	  Astrill VPN seems to require something similar, and there are
	  doubtless other such preload hacks.

	* Some versions of ESET File Security call msgget and msgsnd; if
	  this program is in use, then allow those.

man-db 2.8.3 (5 April 2018)
===========================

Major changes since man-db 2.8.2:

	Fixes:
	------

	* Make seccomp sandbox allow madvise, since that's used by lbzip2.

	* Make seccomp sandbox allow kill and tgkill outright, since groff
	  uses kill to pass on signals to its child processes.

	* Make seccomp sandbox allow sibling architectures on
	  x86/x86_64/x32, since people sometimes mix and match architectures
	  there for performance reasons.
