@@ -15,6 +15,8 @@ Major changes since man-db 2.8.4:
 
 	* Fix several resource and memory leaks.
 
+	* Fix handling of \- in the right-hand side of a NAME section.
+
 man-db 2.8.4 (27 July 2018)
 ===========================
 
